--- a/DbInvoice_frontend/package.json
+++ b/DbInvoice_frontend/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-to-print": "^2.15.1",
+    "recharts": "^3.5.1",
     "to-words": "^4.2.0"
   },
   "devDependencies": {
