--- a/dbInvoice_backend/package.json
+++ b/dbInvoice_backend/package.json
@@ -11,12 +11,15 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0",
+    "express": "^5.2.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.19.3",
+    "mongoose": "^8.20.1",
+    "multer": "^2.0.2",
     "pdfkit": "^0.17.2",
+    "streamifier": "^0.1.1",
     "to-words": "^4.8.0"
   },
   "devDependencies": {
